Vercel Analytics Data

--- a/index.html
+++ b/index.html
@@ -198,5 +198,6 @@
     </main>
 
     <script src="js/index.js"></script>
+    <script src="https://analytics.vercel.com/script.js" async></script>
   </body>
 </html>
